removed depth_from and depth_to passed in the context, and used the one passed in the widget

--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -517,7 +517,7 @@
         </div>
     </div>
 
-    {% include "validator/ismn_dialog.html" with depth_range=depth_range %}
+    {% include "validator/ismn_dialog.html"%}
 
 {% endblock %}
 
