--- a/validator/templates/validator/ismn_dialog.html
+++ b/validator/templates/validator/ismn_dialog.html
@@ -800,13 +800,13 @@
                 <div>
                     <div></div>
                         <label for="depth_from">Depth from: </label>
-                        <input class="depth_range form-control" id="depth_from" value="{{ depth_range.0 }}" type="number" name="first_range"
+                        <input class="depth_range form-control" id="depth_from" value="" type="number" name="first_range"
                             onchange="toggleISMNContinent(this)" step="0.01" min="0.00">
                         <label for="depth_from">m</label>
                     </div>
                     <div>
                         <label for="depth_to">Depth to: </label>
-                        <input class="depth_range form-control" id="depth_to" value="{{ depth_range.1 }}" type="number" name="first_range"
+                        <input class="depth_range form-control" id="depth_to" value="" type="number" name="first_range"
                             onchange="toggleISMNContinent(this)" step="0.01" min="0.00">
                         <label for="depth_to">m</label>
                     </div>
@@ -895,15 +895,20 @@
     $('#ismn_depth').on('show.bs.modal', function(e) { // happens when dialog is activated
         var callerId = e.relatedTarget.id;
         var hiddenId = callerId.replace(/_link$/, '_params');
+        var ranges = $('#'+hiddenId).val().split(',')
+        console.log(parseFloat(ranges[0]))
         var ismnDialog = $(e.currentTarget);
         ismnDialog.find('#id_target_hidden_input_depth').val(hiddenId); // remember where the selected depths need to go
+        $('#depth_from').val(parseFloat(ranges[0]))
+        $('#depth_to').val(parseFloat(ranges[1]))
 
-        var depth_from = $('#depth_from').val()
-        var depth_to = $('#depth_to').val()
-        var ranges = [depth_from, depth_to]
 
-        var depthList = ranges//preselectedDepths.split(',');
-        console.log(depthList)
+<!--        var depth_from = $('#depth_from').val()-->
+<!--        var depth_to = $('#depth_to').val()-->
+<!--        var ranges = [depth_from, depth_to]-->
+
+<!--        var depthList = ranges//preselectedDepths.split(',');-->
+<!--        console.log(depthList)-->
     });
 <!--Monika-->
 
