description of imsn network selection improved

--- a/validator/templates/validator/ismn_dialog.html
+++ b/validator/templates/validator/ismn_dialog.html
@@ -16,7 +16,7 @@
 
                 <p>
                     Click on a continent to unfold its list of networks.<br/>
-                    Networks are listed here with <b>network name</b>, <b>countries</b>, and <b>number of stations</b>.<br/>
+                    Networks are listed here with <b>network name</b> and <b>countries</b><br/>
                     You can find more information about the ISMN networks on the <a href="https://ismn.geo.tuwien.ac.at/en/networks/"
                     target="_blank">ISMN networks list</a>.
                 </p>
