--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block content %}
-    <form action="{% url 'validation' %}" method="post" id="validation_form" data-options-url="{% url 'ajax_get_dataset_options' %}">
+    <form action="{% url 'validation' %}" method="post" id="validation_form" data-options-url="{% url 'ajax_get_dataset_options' %}" version-options-url="{% url 'ajax_get_version_id' %}">
         {% csrf_token %}
 
         {% with WIDGET_ERROR_CLASS='is-invalid' %}
@@ -163,6 +163,7 @@
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text addon-w" id="ref-addon2">Version</span>
                                                 </div>
+                                                <input type="hidden" id="id_target_hidden_input_version" value="" name="target_hidden_input_version">
                                                 {% render_field ref_dc_form.version class="custom-select" %}
                                             </div>
                                             {% for error in ref_dc_form.version.errors %}
@@ -528,6 +529,10 @@
     <link rel="stylesheet" href="/static/leaflet/leaflet.draw.css" />
     <script src="/static/leaflet/leaflet.draw.js"></script>
 
+<!--    Monika  -->
+    <script src="/static/js/test.js"></script>
+<!--    Monika  -->
+
     <script type="text/javascript">
         var southWest = L.latLng(-90, -360), northEast = L.latLng(90, 360), bounds = L.latLngBounds(southWest, northEast);
         var map = L.map('spatialFilterMap', { maxBounds: bounds });
@@ -649,9 +654,20 @@
                     $(variable_widget).html(return_data['variables']);
                     $(filter_widget).html(return_data['filters']);
                     $(param_filter_widget).html(return_data['paramfilters']);
+
+                    if(datasetId==4){
+                        var default_value = $(version_widget).find('option')[0].value
+                        $('#id_target_hidden_input_version').val(default_value)
+                    } else{
+                        $('#id_target_hidden_input_version').val('')
+                    }
+
                 }
             });
+
         }
+
+
 
         function change_tab_name() {
             var datasetName = $(this).find('option:selected').text();
@@ -662,7 +678,10 @@
         {% for dc_form in dc_formset.forms %}
             $("#{{ dc_form.dataset.auto_id }}").change(ajax_change_dataset).change(change_tab_name).change(); // last change() to call change on pageload
         {% endfor %}
+
         $("#{{ ref_dc_form.dataset.auto_id }}").change(ajax_change_dataset).change(); // last change() to call change on pageload
+        $('#id_ref-version').change(get_version_id)
+
     </script>
 
     <script type="text/javascript">
@@ -744,12 +763,9 @@
             }
            // show remove button and change its
             if ( totalNoForms > 1 ) {
-<!--                $(newButton).css('margin-left', '0.3rem')-->
                 newButton.show();
             }
-<!--            if (totalNoForms == $(maxSelector).val()) {-->
-<!--                $(removeButton).css('margin-left', 'auto');-->
-<!--            }-->
+
 
 
             // trigger change event on dataset select so that dependent parameters are set correctly
