--- a/validator/templates/validator/result.html
+++ b/validator/templates/validator/result.html
@@ -183,7 +183,7 @@
                                 <figcaption id="id_boxplot_label" class="figure-caption">Description goes here</figcaption>
                             </figure>
                             <span style="min-width:1rem;"></span>
-                            <figure class="figure" style="max-width: 50%;">
+                            <figure class="figure" style="max-width: 50%; margin: auto; display: block;">
                                 <a id="id_overview_link" href="#" class="center-text">
                                     <img id="id_overview" src="#" alt="#" title="#" class="figure-thumb img-fluid">
                                 </a>
