--- a/validator/templates/validator/result.html
+++ b/validator/templates/validator/result.html
@@ -183,7 +183,7 @@
                                 <figcaption id="id_boxplot_label" class="figure-caption">Description goes here</figcaption>
                             </figure>
                             <span style="min-width:1rem;"></span>
-                            <figure class="figure" style="max-width: 50%;">
+                            <figure class="figure" style="max-width: 50%; margin: auto; display: block;">
                                 <a id="id_overview_link" href="#" class="center-text">
                                     <img id="id_overview" src="#" alt="#" title="#" class="figure-thumb img-fluid">
                                 </a>
@@ -250,7 +250,7 @@
         var metric = $("#id_graph_metric").val()
         var pair = $("#id_graph_pair").val()
         var labels = {{json_metrics|safe}}
-        var overview_label = 'The distribution of ' + labels[metric] + ' for dataset pair ' + pair + ' values plotted on a map.'
+        var overview_label = 'The distribution of ' + labels[metric] + ' for dataset combination ' + pair + ' values plotted on a map.'
         var overview_url = '';
         if(metric == 'n_obs') {
             overview_url = '{{ val.output_dir_url }}' + 'overview_' + metric + '.png';
